--- a/web/search/templates/alter.html
+++ b/web/search/templates/alter.html
@@ -11,9 +11,9 @@
         </div>
 
 
-        <div>
+        <div class='frame'>
             <form method="get">
-                <table>
+                <table class='form'>
                     {{ select_neighborhood_form }}
                 </table>
                 <input type="submit" value="Submit" />
