--- a/web/search/templates/index.html
+++ b/web/search/templates/index.html
@@ -11,14 +11,16 @@
         </div>
 
 
-        <div>
+        <div class='frame'>
             <form method="get">
-                <table>
+                <table class='form'>
                     {{ select_neighborhood_form }}
                 </table>
                 <input type="submit" value="Submit" />
             </form>
         </div>
+
+        
 
     </body>
 </html>
