--- a/web/search/templates/index.html
+++ b/web/search/templates/index.html
@@ -10,7 +10,7 @@
             <h2>Neighborhood Real Estate Pricing</h2>
         </div>
 
-
+        {% if current_neighborhood_data == None %}
         <div class='frame'>
             <form method="get">
                 <table class='form'>
@@ -19,8 +19,28 @@
                 <input type="submit" value="Submit" />
             </form>
         </div>
+        {% endif %}
 
-        
+        {% if current_neighborhood_data != None %}
+        <div>
+            <table>
+                <tr>
+                    <td>
+                    {{ current_neighborhood_data }}
+                    </td>
+                </tr>
+            </table> 
+        </div>
+        <div class='frame'>
+            <form method="get">
+                <table class='form'>
+                    {{ alter_form }}
+                </table>
+                <input type="submit" value="Submit" />
+            </form>
+        </div>
+        {% endif %}
+
 
     </body>
 </html>
